# krokonf

./: .gitignore  CMakeLists.txt  README.md  crookconf.cpp  crookconf.h  krokonf.desktop  krokonf.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
.ci/: ci-script.sh
.github/workflows/: cmake.yml
src/: crookconf.h  kernelselect.cpp  kernelselect.h  kernelselect.ui  main.cpp  mainwindow.cpp  mainwindow.ui
translations/: CMakeLists.txt  krokonf_en.ts
ui/: mainwindow.ui
